<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE26B"
    android:orientation="vertical"
    tools:context=".Vista.ProveedoresAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#FF9800"
            app:srcCompat="@drawable/ic_home" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="348dp"
            android:layout_height="60dp"
            android:autoSizeTextType="uniform"
            android:background="#FF9800"
            android:text="Administrador de Proveedores"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/etNombreProv"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/lavender_border"
        android:drawablePadding="8dp"
        android:hint=" Nombres"
        tools:ignore="TouchTargetSizeCheck" />

    <AutoCompleteTextView
        android:id="@+id/etRUCProv"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/lavender_border"
        android:drawablePadding="8dp"
        android:hint=" RUC"
        tools:ignore="TouchTargetSizeCheck" />

    <AutoCompleteTextView
        android:id="@+id/etTelefonoProv"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/lavender_border"
        android:drawablePadding="8dp"
        android:hint="Teléfono"
        tools:ignore="TouchTargetSizeCheck" />

    <AutoCompleteTextView
        android:id="@+id/etEmailProv"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/lavender_border"
        android:drawablePadding="8dp"
        android:hint=" E-mail"
        tools:ignore="TouchTargetSizeCheck" />

    <AutoCompleteTextView
        android:id="@+id/etDireccionProv"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/lavender_border"
        android:drawablePadding="8dp"
        android:hint=" Dirección"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/btnAgregarProv"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#33930A"
            android:onClick="agregarprov"
            android:text="AGREGAR"
            app:iconPadding="8dp" />

        <Button
            android:id="@+id/btnConsultarProv"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#09B7EC"
            android:onClick="consultarprov"
            android:text="CONSULTAR" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditarProv"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:onClick="modificarprov"
            android:text="EDITAR" />

        <Button
            android:id="@+id/btnBorrarProv"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#D31717"
            android:onClick="borrarprov"
            android:text="BORRAR" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvListadoProv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>